--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,9 @@
         </div>
     </scvo-app>
 
-    <script src="polyfills.bundle.js"></script>
-    <script src="vendor.bundle.js"></script>
-    <script src="app.bundle.js"></script>
+    <script src="/polyfills.bundle.js"></script>
+    <script src="/vendor.bundle.js"></script>
+    <script src="/app.bundle.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script>
