Fixed mobile menu, changed search code, upgraded to RC4

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,11 @@
                 <div class="spinner-layer spinner-blue">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
-                    </div><div class="gap-patch">
+                    </div>
+                    <div class="gap-patch">
                         <div class="circle"></div>
-                    </div><div class="circle-clipper right">
+                    </div>
+                    <div class="circle-clipper right">
                         <div class="circle"></div>
                     </div>
                 </div>
@@ -44,9 +46,11 @@
                 <div class="spinner-layer spinner-red">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
-                    </div><div class="gap-patch">
+                    </div>
+                    <div class="gap-patch">
                         <div class="circle"></div>
-                    </div><div class="circle-clipper right">
+                    </div>
+                    <div class="circle-clipper right">
                         <div class="circle"></div>
                     </div>
                 </div>
@@ -54,9 +58,11 @@
                 <div class="spinner-layer spinner-yellow">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
-                    </div><div class="gap-patch">
+                    </div>
+                    <div class="gap-patch">
                         <div class="circle"></div>
-                    </div><div class="circle-clipper right">
+                    </div>
+                    <div class="circle-clipper right">
                         <div class="circle"></div>
                     </div>
                 </div>
@@ -64,9 +70,11 @@
                 <div class="spinner-layer spinner-green">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
-                    </div><div class="gap-patch">
+                    </div>
+                    <div class="gap-patch">
                         <div class="circle"></div>
-                    </div><div class="circle-clipper right">
+                    </div>
+                    <div class="circle-clipper right">
                         <div class="circle"></div>
                     </div>
                 </div>
@@ -75,10 +83,40 @@
         </div>
     </scvo-app>
 
-    <script src="/polyfills.bundle.js"></script>
-    <script src="/vendor.bundle.js"></script>
-    <script src="/app.bundle.js"></script>
+    <!-- Begin Cookie Consent plugin -->
+    <script type="text/javascript">
+    window.cookieconsent_options = {"message":"This website uses cookies to anonymously track visitor numbers","dismiss":"Continue","learnMore":"Read more","link":"https://fundraisingcomplaints.scot/privacy-and-cookies","theme":"dark-floating"};
+    </script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
+    <!-- End Cookie Consent plugin -->
 
+    <!-- Begin Browser Update plugin -->
+    <script>
+    var $buoop = {c:2};
+    function $buo_f(){
+        var e = document.createElement("script");
+        e.src = "//browser-update.org/update.min.js";
+        document.body.appendChild(e);
+    };
+    try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
+    catch(e){window.attachEvent("onload", $buo_f)}
+    </script>
+    <!-- End Browser Update plugin -->
+
+    <!-- Begin Google Analytics -->
+    <script>
+    var ga = ga || undefined;
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-3467930-15']);
+    (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
+    <!-- End Google Analytics -->
+
+    <!-- Begin Google Firebase -->
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script>
     // Initialize Firebase
@@ -90,6 +128,20 @@
     };
     firebase.initializeApp(config);
     </script>
+    <!-- End Google Firebase -->
+
+    <!-- Begin polyfills -->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
+    <script src="/polyfills.bundle.js"></script>
+    <!-- End polyfills -->
+
+    <!-- Begin Angular plugins -->
+    <script src="/vendor.bundle.js"></script>
+    <!-- End Angular plugins -->
+
+    <!-- Begin Angular app -->
+    <script src="/app.bundle.js"></script>
+    <!-- End Angular app -->
 
 </body>
 </html>
