--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <meta property="og:title" content="">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 </head>
 <body>
 
@@ -42,7 +43,6 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-
                 <div class="spinner-layer spinner-red">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
@@ -54,7 +54,6 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-
                 <div class="spinner-layer spinner-yellow">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
@@ -66,7 +65,6 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-
                 <div class="spinner-layer spinner-green">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
@@ -85,7 +83,7 @@
 
     <!-- Begin Cookie Consent plugin -->
     <script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to anonymously track visitor numbers","dismiss":"Continue","learnMore":"Read more","link":"https://fundraisingcomplaints.scot/privacy-and-cookies","theme":"dark-floating"};
+    window.cookieconsent_options = {"message":"This website uses cookies to anonymously track visitor numbers","dismiss":"Continue","learnMore":"Read more","link":"/privacy","theme":"dark-floating"};
     </script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
     <!-- End Cookie Consent plugin -->
@@ -107,7 +105,7 @@
     <script>
     var ga = ga || undefined;
     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-3467930-15']);
+    _gaq.push(['_setAccount', 'UA-3467930-14']); // TODO: for launch, set this to the live ID (UA-3467930-2)
     (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
@@ -117,7 +115,7 @@
     <!-- End Google Analytics -->
 
     <!-- Begin Google Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
     <script>
     // Initialize Firebase
     var config = {
