--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" >
 
-    <base href=".">
+    <base href="/">
 
     <title>Scottish Council for Voluntary Organisations</title>
 
