--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,6 @@
     <meta name="twitter:creator" content="@scvotweet" />
     <meta name="twitter:image" content="">
 
-    <!-- TODO: Place favicon.ico etc. in the root directory, add necessary tags -->
     <meta property="og:image" content="">
     <meta name="og:type" content="">
     <meta property="og:image:width" content="">
@@ -116,14 +115,11 @@
 
     <!-- Begin Google Analytics -->
     <script>
-    var ga = ga || undefined;
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-3467930-14']); // TODO: for launch, set this to the live ID (UA-3467930-2)
-    (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-3467930-14', 'auto'); // TODO: for launch, set this to the live ID (UA-3467930-2)
     </script>
     <!-- End Google Analytics -->
 
