--- a/src/index.html
+++ b/src/index.html
@@ -119,6 +119,8 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      var _gaq = window._gaq || null;
+      var ga = window.ga || null;
       ga('create', 'UA-3467930-14', 'auto'); // TODO: for launch, set this to the live ID (UA-3467930-2)
     </script>
     <!-- End Google Analytics -->
