Reengineered global services

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 
-    <scvo-app>
+    <scvo>
         <div class="spinner-wrapper">
             <div class="preloader-wrapper big active">
                 <div class="spinner-layer spinner-blue">
@@ -78,7 +78,7 @@
             </div>
             <p class="white-text"><strong>Loading&hellip;</strong></p>
         </div>
-    </scvo-app>
+    </scvo>
 
     <!-- Begin polyfills -->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
@@ -124,6 +124,16 @@
       ga('create', 'UA-3467930-14', 'auto'); // TODO: for launch, set this to the live ID (UA-3467930-2)
     </script>
     <!-- End Google Analytics -->
+
+    <!-- Begin Google Tag Manager -->
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WSK6DS"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WSK6DS');</script>
+    <!-- End Google Tag Manager -->
 
     <!-- Begin Google Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
