Minor layout improvements

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 </head>
 <body>
-
     <scvo>
         <div class="spinner-wrapper">
             <div class="preloader-wrapper big active">
@@ -81,7 +80,7 @@
     </scvo>
 
     <!-- Begin polyfills -->
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&gated=1"></script>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=console.*,Intl.~locale.en&amp;gated=1"></script>
     <script src="/polyfills.bundle.js"></script>
     <!-- End polyfills -->
 
