Updated home prototype and loading spinner

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 <body>
     <scvo>
         <div class="spinner-wrapper">
-            <div class="preloader-wrapper big active">
+            <!-- <div class="preloader-wrapper big active">
                 <div class="spinner-layer spinner-blue">
                     <div class="circle-clipper left">
                         <div class="circle"></div>
@@ -74,6 +74,15 @@
                         <div class="circle"></div>
                     </div>
                 </div>
+            </div> -->
+            <div class="spinner">
+              <i></i>
+              <i></i>
+              <i></i>
+              <i></i>
+              <i></i>
+              <i></i>
+              <i></i>
             </div>
             <p class="white-text"><strong>Loading&hellip;</strong></p>
         </div>
