--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
     <meta name="twitter:card" content="" />
     <meta name="twitter:site" content="@scvotweet" />
     <meta name="twitter:creator" content="@scvotweet" />
-    <meta name="twitter:image" content="">
+    <meta name="twitter:image" content="" />
 
-    <meta property="og:image" content="">
-    <meta name="og:type" content="">
-    <meta property="og:image:width" content="">
-    <meta property="og:image:height" content="">
-    <meta property="og:title" content="">
+    <meta property="og:image" content="" />
+    <meta name="og:type" content="" />
+    <meta property="og:image:width" content="" />
+    <meta property="og:image:height" content="" />
+    <meta property="og:title" content="" />
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
