--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 
     <!-- Begin Browser Update plugin -->
     <script>
-    var $buoop = {c:2};
+    var $buoop = {vs:{i:10,f:-6,o:-6,s:7,c:-8},unsecure:true,mobile:false,api:4};
     function $buo_f(){
         var e = document.createElement("script");
         e.src = "//browser-update.org/update.min.js";
