Added IE-specific shims for compatibility

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,23 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+
+    <script type="text/javascript">
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-3467930-14', 'auto');
+    ga('set', 'dimension2', location.hostname);
+    //ga('send', 'pageview', {
+    //    dimension2: location.hostname,
+    //});
+    </script>
+    <script src="//unpkg.com/es6-shim@0.35.3/es6-shim.min.js"></script>
+    <script src="//unpkg.com/systemjs@0.19.47/dist/system-polyfills.js"></script>
+    <script src="//unpkg.com/angular2@2.0.0-beta.21/es6/dev/src/testing/shims_for_IE.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.7/history.min.js"></script>
 </head>
 <body>
     <scvo>
@@ -109,18 +126,6 @@
     catch(e){window.attachEvent("onload", $buo_f)}
     </script>
     <!-- End Browser Update plugin -->
-
-    <!-- Begin Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      var _gaq = window._gaq || null;
-      var ga = window.ga || null;
-      ga('create', 'UA-3467930-14', 'auto'); // TODO: for launch, set this to the live ID (UA-3467930-2)
-    </script>
-    <!-- End Google Analytics -->
 
     <!-- Begin Google Tag Manager -->
     <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WSK6DS"
