--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image:height" content="" />
     <meta property="og:title" content="" />
 
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" />
+    <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" /> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 
@@ -45,66 +45,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.7/history.min.js"></script>
 </head>
 <body>
-    <scvo>
-        <!-- <div class="spinner-wrapper">
-              <div class="preloader-wrapper big active">
-                <div class="spinner-layer spinner-blue">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="gap-patch">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-                <div class="spinner-layer spinner-red">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="gap-patch">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-                <div class="spinner-layer spinner-yellow">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="gap-patch">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-                <div class="spinner-layer spinner-green">
-                    <div class="circle-clipper left">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="gap-patch">
-                        <div class="circle"></div>
-                    </div>
-                    <div class="circle-clipper right">
-                        <div class="circle"></div>
-                    </div>
-                </div>
-            </div> - ->
-            <div class="spinner">
-              <i></i>
-              <i></i>
-              <i></i>
-              <i></i>
-              <i></i>
-              <i></i>
-              <i></i>
-            </div>
-            <p class="white-text"><strong>Loading&hellip;</strong></p>
-        </div> -->
-    </scvo>
+    <scvo></scvo>
 
     <div id="loader" style="position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:9999; display:flex; align-items:center; justify-content:center;">
         <i class="fa fa-fw fa-spinner fa-spin" style="color:black;"></i>
