Added Bootstrap & updated services page layout

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,9 @@
     <meta property="og:title" content="" />
 
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" /> -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 
     <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
 
@@ -37,9 +38,6 @@
 
     ga('create', 'UA-3467930-2', 'auto');
     ga('set', 'dimension2', location.hostname);
-    //ga('send', 'pageview', {
-    //    dimension2: location.hostname,
-    //});
     </script>
     <script src="//unpkg.com/es6-shim@0.35.3/es6-shim.min.js"></script>
     <script src="//unpkg.com/systemjs@0.19.47/dist/system-polyfills.js"></script>
@@ -54,7 +52,6 @@
     </div>
 
     <script async src="//cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
-    <!-- <script src="//storage.googleapis.com/scvo-frontend.appspot.com/baseDb.js"></script> -->
 
     <!-- Begin Cookie Consent plugin -->
     <script type="text/javascript">
