--- a/src/index.html
+++ b/src/index.html
@@ -83,5 +83,7 @@
     '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-WSK6DS');</script>
     <!-- End Google Tag Manager -->
+
+    <script id="dsq-count-scr" src="//scottish-council-for-voluntary-organisations.disqus.com/count.js" async></script>
 </body>
 </html>
