--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     <meta property="og:image:height" content="" />
     <meta property="og:title" content="" />
 
+    <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="/opensearch.xml" />
+
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" /> -->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -46,6 +48,7 @@
     <scvo></scvo>
 
     <div id="loader" style="position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:9999; display:flex; align-items:center; justify-content:center;">
+        <!-- <md-progress-spinner mode="indeterminate"></md-progress-spinner> -->
         <i class="fa fa-fw fa-spinner fa-spin" style="color:black;"></i>
     </div>
 
