Reconfigured tab to search:

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image:height" content="" />
     <meta property="og:title" content="" />
 
-    <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="/opensearch.xml" />
+    <link rel="search" type="application/opensearchdescription+xml" title="SCVO" href="/app/assets/opensearch.xml" />
 
     <!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" /> -->
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
