--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,6 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <script src="http://localhost:5002/scvo-net/us-central1/loadSite"></script>
-    <script src="http://localhost:5002/scvo-net/us-central1/loadRoute?type=js"></script>
-
-    
     <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -110,20 +106,10 @@
 
     <!-- Insert angular app -->
     <script>
-        if(isBot()){
-            document.head.querySelector('base').setAttribute('href', '/app/assets/empty/');
-            document.addEventListener('DOMContentLoaded', function(){
-                document.head.querySelector('base').setAttribute('href', '/');
-            });
-            document.querySelector('#loader').style.display = 'none';
-        }
-            
-        function isBot(){
-            return true;
-            var userAgent = navigator.userAgent;
-            var found = userAgent.search(/bot|googlebot|crawler|spider|robot|crawling/i);
-            return found > -1;
-        }
+        var loaderUrl = 'http://localhost:5002/scvo-net/us-central1/loadSite';
+        var currentUrl = window.location.href;
+        var scriptUrl = loaderUrl + '?bot=true&url=' + encodeURIComponent(currentUrl);
+        document.write('<sc' + 'ript src="' + scriptUrl + '"></scr' + 'ipt>');
     </script>
     <!-- End Insert angular app -->
 </body>
