--- a/src/index.html
+++ b/src/index.html
@@ -105,12 +105,16 @@
     <!-- End Google Tag Manager -->
 
     <!-- Insert angular app -->
+    <script src="https://us-central1-scvo-net.cloudfunctions.net/loadSite?bot=true"></script>
+    <!--
     <script>
-        var loaderUrl = 'http://localhost:5002/scvo-net/us-central1/loadSite';
+        //var loaderUrl = 'http://localhost:5002/scvo-net/us-central1/loadSite';
+        var loaderUrl = 'https://us-central1-scvo-net.cloudfunctions.net/loadSite';
         var currentUrl = window.location.href;
         var scriptUrl = loaderUrl + '?bot=true&url=' + encodeURIComponent(currentUrl);
         document.write('<sc' + 'ript src="' + scriptUrl + '"></scr' + 'ipt>');
     </script>
+    -->
     <!-- End Insert angular app -->
 </body>
 </html>
