--- a/sites/configurations/goodmoves/emails/password-reset.html
+++ b/sites/configurations/goodmoves/emails/password-reset.html
@@ -282,41 +282,40 @@
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
       <![endif]-->
-              <div style="background:#37474F;background-color:#37474F;Margin:0px auto;max-width:580px;">
-                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#37474F;background-color:#37474F;width:100%;">
+              <div style="background:#263238;background-color:#263238;Margin:0px auto;max-width:580px;">
+                <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#263238;background-color:#263238;width:100%;">
                   <tbody>
                     <tr>
-                      <td style="direction:ltr;font-size:0px;padding:10px;text-align:center;vertical-align:top;">
+                      <td style="direction:ltr;font-size:0px;padding:0px;text-align:center;vertical-align:top;">
                         <!--[if mso | IE]>
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                 
         <tr>
       
             <td
-               class="" style="vertical-align:top;width:560px;"
+               class="" style="vertical-align:top;width:580px;"
             >
           <![endif]-->
                         <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
-                                <td style="vertical-align:top;padding:0px;">
+                                <td style="vertical-align:top;padding:10px;">
                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%">
                                     <tr>
-                                      <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
+                                      <td align="left" style="font-size:0px;padding:0px 0px 15px;word-break:break-word;">
                                         <div style="font-family:Montserrat, helvetica, Arial, sans-serif;font-size:14px;line-height:1;text-align:left;color:#ffffff;">
-                                          <p> &#169; 2018 The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558. </p>
-                                          <p> 15 Mansfield Place, Edinburgh, EH3 6BB </p>
+                                          <p style="margin:0px;"> &#169; 2018. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland SC003558. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB. </p>
                                         </div>
                                       </td>
                                     </tr>
                                     <tr>
-                                      <td align="right" style="font-size:0px;padding:0px;word-break:break-word;">
+                                      <td align="center" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <table border="0" cellpadding="0" cellspacing="0" role="presentation" style="border-collapse:collapse;border-spacing:0px;">
                                           <tbody>
                                             <tr>
-                                              <td style="width:119px;">
-                                                <img height="auto" src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:119px;" width="119" />
+                                              <td style="width:125px;">
+                                                <img height="auto" src="https://storage.googleapis.com/scvo-assets/emailer/scvo-logo.png" style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:125px;" width="125" />
                                               </td>
                                             </tr>
                                           </tbody>
